// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TopicTags should correctly render a single topic tag for burmese 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 0.25rem;
  margin: 0;
  padding: 0;
}

.emotion-1 {
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.9375rem;
  line-height: 1.625rem;
  word-break: break-word;
  min-width: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1.125rem;
    line-height: 2rem;
  }
}

.emotion-1 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.25rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-1 a:hover,
.emotion-1 a:focus {
  color: #B80000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        href="#"
      >
        test1
      </a>
    </div>
  </div>
</div>
`;

exports[`TopicTags should correctly render a single topic tag for news 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 0.25rem;
  margin: 0;
  padding: 0;
}

.emotion-1 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  word-break: break-word;
  min-width: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-1 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.25rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-1 a:hover,
.emotion-1 a:focus {
  color: #B80000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        href="#"
      >
        test1
      </a>
    </div>
  </div>
</div>
`;

exports[`TopicTags should correctly render a single topic tag for persian 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 0.25rem;
  margin: 0;
  padding: 0;
}

.emotion-1 {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  word-break: break-word;
  min-width: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

.emotion-1 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.25rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-1 a:hover,
.emotion-1 a:focus {
  color: #B80000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        href="#"
      >
        test1
      </a>
    </div>
  </div>
</div>
`;

exports[`TopicTags should correctly render multiple topic tags for arabic 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 0.25rem;
  margin: 0;
  padding: 0;
}

.emotion-1 {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  word-break: break-word;
  min-width: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

.emotion-1 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.25rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-1 a:hover,
.emotion-1 a:focus {
  color: #B80000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <a
        href="#"
      >
        test1
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        href="#"
      >
        test2
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        href="#"
      >
        test3
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        href="#"
      >
        test4
      </a>
    </li>
  </ul>
</div>
`;

exports[`TopicTags should correctly render multiple topic tags for news 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 0.25rem;
  margin: 0;
  padding: 0;
}

.emotion-1 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  word-break: break-word;
  min-width: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-1 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.25rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-1 a:hover,
.emotion-1 a:focus {
  color: #B80000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <a
        href="#"
      >
        test1
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        href="#"
      >
        test2
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        href="#"
      >
        test3
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        href="#"
      >
        test4
      </a>
    </li>
  </ul>
</div>
`;
